Deploy hoprd nodes 2.1.0 as yellow nodes in Hetzner

--- a/day-1/Makefile
+++ b/day-1/Makefile
@@ -65,18 +65,18 @@ show: ## Install Hoprd on servers
 decrypt: ensure-env-variable-is-set
 decrypt: ## Install Hoprd on servers
 ifeq ($(env),staging)
-	for i in {1..25}; do ansible-vault decrypt --vault-password-file .vault_pass ./files/$(env)/hetzner-$(env)-alpha-$$i/.env-rpch; done
+	for i in {1..25}; do ansible-vault decrypt --vault-password-file .vault_pass ./inventories/$(env)/host_vars/hetzner-$(env)-alpha-$$i/vault.yaml; done
 else
-	for i in {0..24}; do ansible-vault decrypt --vault-password-file .vault_pass ./files/$(env)/production-$$i/.env-rpch; done
+	for i in {0..24}; do ansible-vault decrypt --vault-password-file .vault_pass ./inventories/$(env)/host_vars/production-$$i/vault.yaml; done
 endif
 
 .PHONY: encrypt
 encrypt: ensure-env-variable-is-set
 encrypt: ## Install Hoprd on servers
 ifeq ($(env),staging)
-	for i in {1..25}; do ansible-vault encrypt --vault-password-file .vault_pass ./files/$(env)/hetzner-$(env)-alpha-$$i/.env-rpch; done
+	for i in {1..25}; do ansible-vault encrypt --vault-password-file .vault_pass ./inventories/$(env)/host_vars/hetzner-$(env)-alpha-$$i/vault.yaml; done
 else
-	for i in {0..24}; do ansible-vault encrypt --vault-password-file .vault_pass ./files/$(env)/production-$$i/.env-rpch; done
+	for i in {1..24}; do ansible-vault encrypt --vault-password-file .vault_pass ./inventories/$(env)/host_vars/production-$$i/vault.yaml; done
 endif
 
 
